
Minor changes
-------------

* All tests converted to pytest
* Pyflakes used for static code analysis


Pull requests
-------------
#70 Add filterColumn, sortCondition support to AutoFilter (SHIBUKAWA Yoshiki)
#82 Update API for conditional formatting


Bug fixes
---------
#46  - ColumnDimension style error
#137 - Workbooks with chartsheets
#269 - Handling unsized worksheets in IterableWorksheet


1.8.4 (unreleased)
==================

Bugfixes
--------
#268 non-ascii in formualae


1.8.3 (2014-02-09)
==================

Major changes
-------------
Always parse using cElementTree

Minor changes
-------------
Slight improvements in memory use when parsing

Bugfix #256 - error when trying to read comments with optimised reader
Bugfix #260 - unsized worksheets
Bugfix #264 - only numeric cells can be dates


1.8.2 (2014-01-17)
==================

Bugfix #247 - iterable worksheets open too many files
Bugfix #252 - improved handling of lxml
Bugfix #253 - better handling of unique sheetnames


1.8.1 (2014-01-14)
==================

Bugfix #246


1.8.0 (2014-01-08)
==================

Compatibility
-------------

Support for Python 2.5 dropped.

Major changes
-------------

* Support conditional formatting
* Support lxml as backend
* Support reading and writing comments
* pytest as testrunner now required
* Improvements in charts: new types, more reliable


Minor changes
-------------

* load_workbook now accepts data_only to allow extracting values only from
formulae. Default is false.
* Images can now be anchored to cells
* Docs updated
* Provisional benchmarking
* Added convenience methods for accessing worksheets and cells by key


1.7.0 (2013-10-31)
==================


Major changes
-------------

Drops support for Python < 2.5 and last version to support Python 2.5


Compatibility
-------------

Tests run on Python 2.5, 2.6, 2.7, 3.2, 3.3


Merged pull requests
--------------------

#27 Include more metadata
#41 Able to read files with chart sheets